<resources>
    <string name="app_name">Ma Réu</string>
    <string name="action_settings">Settings</string>
    <string name="enter_meeting">Entrer une réunion</string>
    <string name="meeting_name">Nom</string>
    <string name="meeting_place">Lieu</string>
    <string name="meeting_time">Heure (19h00)</string>
    <string name="meeting_participant">Participant (email uniquement)</string>
    <string name="save_button">Enregistrer</string>
    <string name="meeting_subject">Sujet</string>
    <string name="number_of_participant">Nombre de participant : 0</string>
    <string name="add_participant">Ajouter un participant</string>
    <string name="content_description">profile</string>
    <string name="time"> Time</string>
    <string name="place"> Place</string>
    <string name="participant_email">Participant email</string>
    <string name="separation">-</string>
    <string name="date">Date</string>
    <string name="profile_description">Image</string>
    <string name="name">Name</string>
    <string name="tiret">-</string>
    <string name="meeting_details">Subject - Hour - Room</string>
</resources>
