<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/enter_meeting"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/meeting_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/meeting_subject"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/meeting_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meeting_subject"
                android:hint="@string/meeting_time"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meeting_place"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/date"/>

            <EditText
                android:id="@+id/meeting_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meeting_time"
                android:hint="@string/meeting_place"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <TextView
                android:id="@+id/number_of_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_button"
                android:layout_marginTop="1dp"
                android:hint="@string/number_of_participant" />

            <Button
                android:id="@+id/add_prtcp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number_of_participant"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:text="@string/add_participant" />

            <Button
                android:id="@+id/save_meeting_button"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/add_prtcp_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_button"
                android:textStyle="bold|italic"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>