<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/meeting_img"
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/content_description"
                android:layout_marginLeft="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mlr_subject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/meeting_subject"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:id="@+id/mlt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/time"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:id="@+id/mir_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/place"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/participant_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/participant_email"
                    android:layout_marginLeft="10dp" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>